--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>App</title>
+    <title>RodaGrokking</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -19,12 +19,12 @@
   <body>
     <nav class="navbar navbar-default" role="navigation">
       <div class="container">
-        <a class="navbar-brand" href="#">App</a>
+        <a class="navbar-brand" href="#">RodaGrokking</a>
       </div>
     </nav>
 
     <div class="container" id="content">
-      <%== yield %>
+      <%= yield %>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
