--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,11 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>RodaGrokking</title>
-
+    <title>Grokking Data Engineer Course</title>
+    <link href="https://s3-ap-southeast-1.amazonaws.com/viphat.work/favicon.ico" rel="icon" type="image/x-icon" />
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://s3-ap-southeast-1.amazonaws.com/viphat.work/datepicker.css">
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://s3-ap-southeast-1.amazonaws.com/viphat.work/bootstrap-datepicker.js"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -19,17 +23,13 @@
   <body>
     <nav class="navbar navbar-default" role="navigation">
       <div class="container">
-        <a class="navbar-brand" href="#">RodaGrokking</a>
+        <a class="navbar-brand" href="#">Grokking Data Engineer Course</a>
       </div>
     </nav>
 
     <div class="container" id="content">
-      <%= yield %>
+      <%== yield %>
     </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   </body>
 </html>
